Added the Client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/product-service
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.root=DEBUG
+
+spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.application.name=product-service
+server.port=8100
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.cloud.config.import-check.enabled=false
 
